[package]
name = "iaip-agent-registration"
version = "0.1.0"
authors = ["IntellexAI"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing", "legacy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.0.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true 